--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -415,7 +415,7 @@
       <!-- Enable face auth when swiping security view -->
     <bool name="config_faceAuthOnSecurityView">false</bool>
 
-    <!-- Hardware keys present on the device, stored as a bit field.
+      <!-- Hardware keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following keys present:
              1 - Home
@@ -459,6 +459,10 @@
     -->
     <integer name="config_longPressOnAppSwitchBehavior">1</integer>
    
+    <!-- Button backlight -->
+    <bool name="config_button_brightness_support">true</bool>
+    <bool name="config_deviceHasVariableButtonBrightness">true</bool>
+    <integer name="config_button_brightness_default">128</integer>
 </resources>
 
 
